--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       </nav>
     </header>
     <div class="links shadow-lg p-3 mb-5 text-center container">
-        <a class="border-end" href="http://" target="_blank"><i id="whatsapp" class="fa-brands fa-whatsapp"></i></a>
-        <a class="border-end" href="http://" target="_blank"><i id="instagram" class="fa-brands fa-instagram"></i></a>
-        <a class="border-end" href="http://" target="_blank"><i id="behance" class="fa-brands fa-behance"></i></a>
-        <a href="http://" target="_blank"><i id="email" class="fa-solid fa-envelope"></i></a>
+        <a class="border-end" href="https://wa.me//558499562116?text=Ola!%20Quero%20fazer%20meu%20orçamento%20como%20prosseguir?" target="_blank"><i id="whatsapp" class="fa-brands fa-whatsapp"></i></a>
+        <a class="border-end" href="https://www.instagram.com/siga_tj/" target="_blank"><i id="instagram" class="fa-brands fa-instagram"></i></a>
+        <a class="border-end" href="https://www.behance.net/tjdesigng" target="_blank"><i id="behance" class="fa-brands fa-behance"></i></a>
+        <a href="mailto:tj.designg@gmail.com" target="_blank"><i id="email" class="fa-solid fa-envelope"></i></a>
     </div>
     <h1 class="text-center container"><img id="clique" src="./images/6.png" alt=""> Clique nos ícones!</h1>
 
