--- a/index.html
+++ b/index.html
@@ -8,23 +8,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
+<!-----------Conteudo e logo da LP------------------->
 <body style="background-image: url(./images/fundo.png);background-size: cover;background-position: center;">
-    <header class="container-fluid flex-column">
+    <header class="container-fluid flex-column" style="padding-bottom: 0.2rem;">
      <nav>
         <img src="./images/TJ.png" class="shadow rounded-circle img-fluid logo" alt="...">
       </nav>
+      <h4 class="title">TJ - Design & Serviços Web</h4>
     </header>
-    <div class="links shadow-lg p-3 mb-5 text-center container">
+    <div class="links p-3 mb-5 text-center container">
         <a class="border-end" href="https://wa.me//558499562116?text=Ola!%20Quero%20fazer%20meu%20orçamento%20como%20prosseguir?" target="_blank"><i id="whatsapp" class="fa-brands fa-whatsapp"></i></a>
         <a class="border-end" href="https://www.instagram.com/siga_tj/" target="_blank"><i id="instagram" class="fa-brands fa-instagram"></i></a>
         <a class="border-end" href="https://www.behance.net/tjdesigng" target="_blank"><i id="behance" class="fa-brands fa-behance"></i></a>
         <a href="mailto:tj.designg@gmail.com" target="_blank"><i id="email" class="fa-solid fa-envelope"></i></a>
     </div>
     <h1 class="text-center container"><img id="clique" src="./images/6.png" alt=""> Clique nos ícones!</h1>
-
-    <footer class="footer text-center copyrigh" style="margin-top: 10rem;"> 
-        TJ - Design & Serviços Web. &#169
-        2023 all rights reserved
+<!----------------Rodapé-------------->
+    <footer class="footer text-center copyrigh" style="margin-top: 10rem;opacity:80%;"> 
+        Desenvolvido por TJ - Design & Serviços Web. &#169
+        2023
     </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
