--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <style>
+    body {
+        background-image: url(./images/fundo.png);background-size: cover;background-position: center;
+         }
+    </style>
 </head>
 <!-----------Conteudo e logo da LP------------------->
-<body style="background-image: url(./images/fundo.png);background-size: cover;background-position: center;">
+<body>
     <header class="container-fluid flex-column" style="padding-bottom: 0.2rem;">
      <nav>
         <img src="./images/TJ.png" class="shadow rounded-circle img-fluid logo" alt="...">
